--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,9 @@ hs_err_pid*
 
 ## Directory-based project format:
 .idea/
+.idea/sonarIssues.xml
+.idea/workspace.xml
+
 # if you remove the above rule, at least ignore the following:
 
 # User-specific stuff:
