--- a/build.gradle
+++ b/build.gradle
@@ -13,5 +13,6 @@ repositories {
 }
 
 dependencies {
+    compile group: 'io.dropwizard', name: 'dropwizard-core', version: '0.9.2'
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
