--- a/src/main/resources/config.yaml
+++ b/src/main/resources/config.yaml
@@ -1,1 +1,25 @@
 name: test
+logging:
+  level: INFO
+  appenders:
+  - type: console
+    threshold: ALL
+    logFormat: "PREFIX %-5p [%d{ISO8601}] [%X{reqId} %X{txnId}] %c: %m\n%ex"
+
+server:
+  applicationConnectors:
+  - type: http
+    port: 9999
+  adminConnectors:
+  - type: http
+    port: 9991
+  minThreads: 8
+  maxThreads: 1024
+  gzip:
+    enabled: true
+  requestLog:
+    timeZone: IST
+    appenders:
+    - type: console
+      logFormat: "%-5p [%d{ISO8601}] [%X{reqId} %X{txnId}] %replace(%c: %m){'\n', '\n '}%n%replace(%ex){'(?m)^(.)',' $1'}%nopex"
+
