--- a/build.gradle
+++ b/build.gradle
@@ -14,5 +14,6 @@ repositories {
 
 dependencies {
     compile group: 'io.dropwizard', name: 'dropwizard-core', version: '0.9.2'
+    compile group: 'org.projectlombok', name: 'lombok', version: '1.16.8'
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
