--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,12 @@ repositories {
 
 dependencies {
     compile group: 'io.dropwizard', name: 'dropwizard-core', version: '0.9.2'
+    compile group: 'io.dropwizard', name: 'dropwizard-hibernate', version: '0.9.2'
+    compile group: 'io.dropwizard', name: 'dropwizard-migrations', version: '0.9.2'
+
+    compile group: 'mysql', name: 'mysql-connector-java', version: '6.0.2'
+
+
     compile group: 'org.projectlombok', name: 'lombok', version: '1.16.8'
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
