--- a/src/main/resources/config.yaml
+++ b/src/main/resources/config.yaml
@@ -6,6 +6,37 @@ logging:
     threshold: ALL
     logFormat: "PREFIX %-5p [%d{ISO8601}] [%X{reqId} %X{txnId}] %c: %m\n%ex"
 
+dataSource:
+  # the name of your JDBC driver
+  driverClass: com.mysql.jdbc.Driver
+  # the username
+  user: root
+  # the password
+  password:
+  # the JDBC URL
+  url: jdbc:mysql://localhost/dropwizard-tutorial
+  # any properties specific to your JDBC driver:
+  properties:
+    charSet: UTF-8
+  # the maximum amount of time to wait on an empty pool before throwing an exception
+  maxWaitForConnection: 1s
+  # the SQL query to run when validating a connection's liveness
+  validationQuery: "/* MyService Health Check */ SELECT 1"
+  # the minimum number of connections to keep open
+  minSize: 8
+  # the maximum number of connections to keep open
+  maxSize: 32
+  # whether or not idle connections should be validated
+  checkConnectionWhileIdle: true
+  # how long a connection must be held before it can be validated
+  validationInterval: 10s
+  # the maximum lifetime of an idle connection
+  minIdleTime: 1 minute
+  # the maximum lifetime of an idle connection
+  maxConnectionAge: 1 minute
+  # the amount of time to sleep between runs of the idle connection validation, abandoned cleaner and idle pool resizing
+  evictionInterval: 10s
+
 server:
   applicationConnectors:
   - type: http
