--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ dependencies {
     compile group: 'io.dropwizard', name: 'dropwizard-core', version: '0.9.2'
     compile group: 'io.dropwizard', name: 'dropwizard-hibernate', version: '0.9.2'
     compile group: 'io.dropwizard', name: 'dropwizard-migrations', version: '0.9.2'
+    compile group: 'io.dropwizard', name: 'dropwizard-client', version: '0.9.2'
 
     compile group: 'mysql', name: 'mysql-connector-java', version: '6.0.2'
 
