--- a/build.gradle
+++ b/build.gradle
@@ -12,11 +12,30 @@ repositories {
     mavenCentral()
 }
 
+subprojects {
+
+    apply plugin: 'java'
+
+    repositories {
+        mavenCentral()
+    }
+
+    dependencies {
+
+        compile group: 'org.projectlombok', name: 'lombok', version: '1.16.8'
+    }
+
+}
+
 dependencies {
-    compile group: 'io.dropwizard', name: 'dropwizard-core', version: '0.9.2'
-    compile group: 'io.dropwizard', name: 'dropwizard-hibernate', version: '0.9.2'
-    compile group: 'io.dropwizard', name: 'dropwizard-migrations', version: '0.9.2'
-    compile group: 'io.dropwizard', name: 'dropwizard-client', version: '0.9.2'
+    compile project(':pn-client')
+
+    compile group: 'io.dropwizard', name: 'dropwizard-core', version: dropwizardVersion
+    compile group: 'io.dropwizard', name: 'dropwizard-hibernate', version: dropwizardVersion
+    compile group: 'io.dropwizard', name: 'dropwizard-migrations', version: dropwizardVersion
+    compile group: 'io.dropwizard', name: 'dropwizard-client', version: dropwizardVersion
+
+
 
     compile group: 'mysql', name: 'mysql-connector-java', version: '6.0.2'
 
