--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,8 @@ subprojects {
     }
 
     dependencies {
+        compile group: 'com.google.inject', name: 'guice', version: guiceVersion
+        compile group: 'com.google.inject.extensions', name: 'guice-assistedinject', version: guiceVersion
 
         compile group: 'org.projectlombok', name: 'lombok', version: '1.16.8'
     }
@@ -39,6 +41,9 @@ dependencies {
 
     compile group: 'mysql', name: 'mysql-connector-java', version: '6.0.2'
 
+
+    compile group: 'com.google.inject', name: 'guice', version: guiceVersion
+    compile group: 'com.google.inject.extensions', name: 'guice-assistedinject', version: guiceVersion
 
     compile group: 'org.projectlombok', name: 'lombok', version: '1.16.8'
     testCompile group: 'junit', name: 'junit', version: '4.11'
